# ai_project

cpp/: CMakeLists.txt
cpp/include/: cnn.h  dataLoader.h  dlmath.h  fcweight.h  kernel.h  math.h  nn.h  optimization.h
cpp/src/: DisplayImage.cpp  cnn.cpp  dataLoader.cpp  dlmath.cpp  fcweight.cpp  kernel.cpp  main.cpp  nn.cpp  optimization.cpp  test  test.txt
python/: mnist.py
